--- a/FashionMNIST/Notebook.ipynb
+++ b/FashionMNIST/Notebook.ipynb
@@ -519,6 +519,14 @@
     "        loss_fn\n",
     "    )"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model 2 (CNN model)"
+   ]
   }
  ],
  "metadata": {
